// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button Basic usage 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button adds target if passed via attributes 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             url="http://pega.com"
             target="_blank"
>
  <a href="http://pega.com"
     target="_blank"
     class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
     is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </a>
</bolt-button>
`;

exports[`button Button tag: a 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button tag: button 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button tag: link 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button tag: reset 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button type="reset"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button tag: submit 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button type="submit"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button type: button 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button type="button"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button type: reset 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button type="reset"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button type: submit 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button type="submit"
          class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button with "disabled" adds attr to <a> 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             url="http://pega.com"
             disabled
>
  <a aria-disabled="true"
     class="c-bolt-button c-bolt-button--disabled c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
     is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </a>
</bolt-button>
`;

exports[`button Button with "disabled" adds attr to <a> 2`] = `
<a
  aria-disabled="true"
  class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--disabled"
  style=""
  target="_self"
>
  <!---->
  
        
  <!---->
  
            
  <span
    class="c-bolt-button__item"
    style=""
  >
    <!---->
    <slot
      style=""
    />
    <!---->
  </span>
  
          
  <!---->
  
      
  <!---->
</a>
`;

exports[`button Button with "disabled" adds attr to <button> 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             disabled
>
  <button disabled
          class="c-bolt-button c-bolt-button--disabled c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      This is a button
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button with "disabled" adds attr to <button> 2`] = `
<button
  class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--disabled"
  disabled=""
  style=""
>
  
          
        
  <!---->
  
            
  <span
    class="c-bolt-button__item"
    style=""
  >
    <!---->
    <slot
      style=""
    />
    <!---->
  </span>
  
          
  <!---->
  
      
        
</button>
`;

exports[`button Button with an onClick attributes renders properly 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             on-click="on-click-test"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      Button w/ onClick via attributes
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button with an onClick param renders properly 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             on-click="on-click-test"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      Button with onClick via param
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button with c-bolt- class is thrown out 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      Button with outer JS-prefixed class
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button with inner classes via Drupal Attributes 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center is-active"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      Button with inner classes
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button with outer JS-class via Drupal Attributes 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             class="js-click-me"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      Button with outer JS-prefixed class
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Button with outer classes via Drupal Attributes 1`] = `
<bolt-button size="medium"
             color="primary"
             width="auto"
             border-radius="regular"
             align="center"
             transform="none"
             class="u-bolt-padding-medium"
>
  <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
          is="shadow-root"
  >
    <replace-with-children class="c-bolt-button__item">
      Button with outer classes
    </replace-with-children>
  </button>
</bolt-button>
`;

exports[`button Buttons only render the [disabled] attribute on <button>, tags 1`] = `
<bolt-button
  disabled=""
  no-shadow=""
  style=""
  url="https://google.com"
>
  <!---->
  
        
  <a
    aria-disabled="true"
    class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--disabled"
    style=""
    target="_self"
  >
    <!---->
    
        
    <!---->
    
            
    <span
      class="c-bolt-button__item"
      style=""
    >
      <!---->
      <!---->
      
          Disabled Button
        
      <!---->
      <!---->
    </span>
    
          
    <!---->
    
      
    <!---->
  </a>
  
      
  <!---->
</bolt-button>
`;

exports[`button Buttons only render the [disabled] attribute on <button>, tags 2`] = `
<bolt-button
  no-shadow=""
  style=""
  url="https://google.com"
>
  <!---->
  
        
  <a
    class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
    href="https://google.com"
    style=""
    target="_self"
  >
    <!---->
    
        
    <!---->
    
            
    <span
      class="c-bolt-button__item"
      style=""
    >
      <!---->
      <!---->
      
          Disabled Button
        
      <!---->
      <!---->
    </span>
    
          
    <!---->
    
      
    <!---->
  </a>
  
      
  <!---->
</bolt-button>
`;

exports[`button Buttons only render the [disabled] attribute on <button>, tags 3`] = `
<bolt-button
  disabled=""
  no-shadow=""
  style=""
>
  <!---->
  
        
  <button
    class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--disabled"
    disabled=""
    style=""
  >
    
          
        
    <!---->
    
            
    <span
      class="c-bolt-button__item"
      style=""
    >
      <!---->
      <!---->
      
          Disabled Button
        
      <!---->
      <!---->
    </span>
    
          
    <!---->
    
      
        
  </button>
  
      
  <!---->
</bolt-button>
`;

exports[`button Buttons render and retains extra HTML attributes 1`] = `
<bolt-button
  no-shadow=""
  style=""
>
  <!---->
  
        
  <a
    class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
    data-uuid="1234"
    href="https://yahoo.com"
    style=""
    target="_self"
  >
    <!---->
    
        
    <!---->
    
            
    <span
      class="c-bolt-button__item"
      style=""
    >
      <!---->
      <!---->
      Button w/ Data Attribute
      <!---->
      <!---->
    </span>
    
          
    <!---->
    
      
    <!---->
  </a>
  
      
  <!---->
</bolt-button>
`;

exports[`button Buttons render and retains extra HTML attributes 2`] = `
<bolt-button
  no-shadow=""
  style=""
>
  <!---->
  
        
  <button
    class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
    data-uuid="1234"
    style=""
  >
    
          
        
    <!---->
    
            
    <span
      class="c-bolt-button__item"
      style=""
    >
      <!---->
      <!---->
      Button w/ Data Attribute
      <!---->
      <!---->
    </span>
    
          
    <!---->
    
      
        
  </button>
  
      
  <!---->
</bolt-button>
`;

exports[`button Buttons with initial HTML attributes that conflict w/ custom element props will defer to  using the custom element prop values 1`] = `
<bolt-button
  no-shadow=""
  style=""
  url="https://google.com"
>
  <!---->
  
        
  <a
    class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
    data-uuid="1234"
    href="https://google.com"
    style=""
    target="_self"
  >
    <!---->
    
        
    <!---->
    
            
    <span
      class="c-bolt-button__item"
      style=""
    >
      <!---->
      <!---->
      Button w/ Href Not Matching Prop
      <!---->
      <!---->
    </span>
    
          
    <!---->
    
      
    <!---->
  </a>
  
      
  <!---->
</bolt-button>
`;

exports[`button Buttons with initial HTML attributes that conflict w/ custom element props will defer to  using the custom element prop values 2`] = `
<bolt-button
  no-shadow=""
  style=""
  url="https://github.com"
>
  <!---->
  
        
  <a
    class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
    data-uuid="1234"
    href="https://github.com"
    style=""
    target="_self"
  >
    <!---->
    
        
    <!---->
    
            
    <span
      class="c-bolt-button__item"
      style=""
    >
      <!---->
      <!---->
      Button w/ Href Not Matching Prop
      <!---->
      <!---->
    </span>
    
          
    <!---->
    
      
    <!---->
  </a>
  
      
  <!---->
</bolt-button>
`;

exports[`button Default <bolt-button> w/o Shadow DOM renders 2`] = `
<bolt-button
  no-shadow=""
  style=""
>
  <!---->
  
        
  <button
    class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
    style=""
  >
    
          
        
    <!---->
    
            
    <span
      class="c-bolt-button__item"
      style=""
    >
      <!---->
      <!---->
      This is a button
      <!---->
      <!---->
    </span>
    
          
    <!---->
    
      
        
  </button>
  
      
  <!---->
</bolt-button>
`;

exports[`button Default <bolt-button> with Shadow DOM renders 2`] = `
<button
  class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
  style=""
>
  
          
        
  <!---->
  
            
  <span
    class="c-bolt-button__item"
    style=""
  >
    <!---->
    <slot
      style=""
    />
    <!---->
  </span>
  
          
  <!---->
  
      
        
</button>
`;

exports[`button Default <bolt-button> with Shadow DOM renders 3`] = `
<bolt-button
  style=""
>
  Button Test -- Outer HTML
</bolt-button>
`;

exports[`button Inline button inside a container with defined text alignment. 1`] = `
<div class="o-bolt-grid o-bolt-grid--flex o-bolt-grid--matrix">
  <div class="o-bolt-grid__cell u-bolt-width-12/12 u-bolt-text-align-right">
    <bolt-button size="medium"
                 color="primary"
                 width="auto"
                 border-radius="regular"
                 align="center"
                 transform="none"
    >
      <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
              is="shadow-root"
      >
        <replace-with-children class="c-bolt-button__item">
          Align right
        </replace-with-children>
      </button>
    </bolt-button>
  </div>
  <div class="o-bolt-grid__cell u-bolt-width-12/12 u-bolt-text-align-center">
    <bolt-button size="medium"
                 color="primary"
                 width="auto"
                 border-radius="regular"
                 align="center"
                 transform="none"
    >
      <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
              is="shadow-root"
      >
        <replace-with-children class="c-bolt-button__item">
          Align center
        </replace-with-children>
      </button>
    </bolt-button>
  </div>
  <div class="o-bolt-grid__cell u-bolt-width-12/12 u-bolt-text-align-left">
    <bolt-button size="medium"
                 color="primary"
                 width="auto"
                 border-radius="regular"
                 align="center"
                 transform="none"
    >
      <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
              is="shadow-root"
      >
        <replace-with-children class="c-bolt-button__item">
          Align left
        </replace-with-children>
      </button>
    </bolt-button>
  </div>
</div>
`;
